# jwm

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: drw.hpp
src/: IPCClient.cpp  drw.cpp
